# ROSBOOK-2019

ALCR/: CMakeLists.txt  package.xml
ALCR/launch/: ALCR_bringup.launch
Py-control/: control.py
alcr_navigation/: CMakeLists.txt  package.xml
alcr_navigation/launch/: gmapping_demo.launch
alcr_navigation/launch/includes/: move_base.launch.xml  velocity_smoother.launch.xml
alcr_navigation/launch/includes/gmapping/: gmapping.launch.xml
alcr_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
